<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/llMainLayout"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/device_info"
        android:layout_width="wrap_content"
        android:text="Device Info"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_xxxxlarge"
                    app:cardCornerRadius="@dimen/margin_normal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_small"
                            android:gravity="center"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:visibility="visible">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etProvince"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:hint="@string/province" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_small"
                            android:gravity="center"
                            android:visibility="visible">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etDivision"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:drawableRight="@android:drawable/arrow_down_float"
                                android:focusable="false"
                                android:hint="@string/division" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_small"
                            android:gravity="center"
                            android:visibility="visible">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etDistrict"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:drawableRight="@android:drawable/arrow_down_float"
                                android:focusable="false"
                                android:hint="@string/district" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_small"
                            android:gravity="center"
                            android:visibility="visible">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etTehsilTown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:drawableRight="@android:drawable/arrow_down_float"

                                android:focusable="false"
                                android:hint="@string/tehsil_town" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_margin="@dimen/margin_small"
                            android:gravity="center"
                            android:visibility="visible">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etUc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:drawableEnd="@android:drawable/arrow_down_float"
                                android:drawableRight="@android:drawable/arrow_down_float"
                                android:focusable="false"
                                android:hint="@string/uc" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_small"
                            android:gravity="center">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etArea"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_-, "
                                android:hint="@string/area"
                                android:inputType="text"
                                android:maxLength="25" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_margin="@dimen/margin_small"
                            android:gravity="center">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etTeamNo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789"
                                android:hint="@string/sia_team_no"
                                android:inputType="number"
                                android:maxLength="2" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btnSelectDay"
                                style="@style/ButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/margin_xxxxlarge1"
                                android:layout_gravity="center"
                                android:layout_weight="1"

                                android:background="@drawable/round_corner_button_blue"
                                android:gravity="center"

                                android:text="@string/select_day"
                                android:textColor="@color/color_white" />

                            <Button
                                android:id="@+id/btnNext"
                                style="@style/ButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/field_width"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:background="@drawable/round_corner_bg_green"
                                android:gravity="center"
                                android:text="@string/next"
                                android:textColor="@color/color_white" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>