<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/card_view_width_1"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:cardCornerRadius="5dp">

        <ImageView
            android:visibility="gone"
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_xxlarge"
            android:paddingRight="@dimen/margin_xxlarge">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_xxxlarge"
                android:gravity="center"
                android:textColor="@color/text_gray_dark"
                android:textSize="@dimen/font_xxlarge"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:gravity="center"
                android:textColor="@color/text_gray_dark"
                android:textSize="@dimen/font_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/tvOk"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dialog_button_height"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector_1"

                    android:gravity="center"
                    android:text="@string/ok"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/font_normal"

                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="0.1" />


                <Button
                    android:id="@+id/tvCancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dialog_button_height"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_with_border_lines"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_normal" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>