<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingTop="?attr/actionBarSize"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/clusterTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        android:padding="2dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:padding="5dp"
            android:text="Cluster Type"
            android:textColor="@color/colorPD"
            android:textStyle="bold" />

        <com.hisdu.ses.utils.CustomSearchableSpinner
            android:id="@+id/clusterType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/background"
            android:ems="10"
            android:padding="0dp"
            android:spinnerMode="dialog"
            android:visibility="visible" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/clustersLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xxxxlarge"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:id="@+id/rvFirstCluster"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_xlarge"
                    android:background="@drawable/cluster_btn_n"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btnCluster1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:text="@string/cluster_1"
                                android:textColor="@color/green_color_1"
                                android:textSize="@dimen/font_xlarge" />

                            <TextView
                                android:id="@+id/tvStatus1"
                                style="@style/NormalTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:visibility="gone"
                                android:gravity="center"
                                android:text="@string/count" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvCluster1"
                            style="@style/NormalTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:gravity="center"
                            android:text="@string/count" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rvSecondCluster"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_large"
                    android:background="@drawable/cluster_btn_n"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btnCluster2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:text="@string/cluster_2"
                                android:textColor="@color/green_color_1"
                                android:textSize="@dimen/font_xlarge" />

                            <TextView
                                android:id="@+id/tvStatus2"
                                style="@style/NormalTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:visibility="gone"
                                android:gravity="center"
                                android:text="@string/count" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvCluster2"
                            style="@style/NormalTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:gravity="center"
                            android:text="@string/count" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rvThirdCluster"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_large"
                    android:background="@drawable/cluster_btn_n"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btnCluster3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:text="@string/cluster_3"
                                android:textColor="@color/green_color_1"
                                android:textSize="@dimen/font_xlarge" />

                            <TextView
                                android:id="@+id/tvStatus3"
                                style="@style/NormalTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:visibility="gone"
                                android:text="@string/count" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvCluster3"
                            style="@style/NormalTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:text="@string/count" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSubmit"
                        style="@style/ButtonStyle"
                        android:layout_width="@dimen/button_width_1"
                        android:layout_height="@dimen/margin_xxxxlarge1"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_xsmall"
                        android:alpha="0.5"
                        android:background="@drawable/blue_selecter_light"
                        android:enabled="false"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textColor="@color/color_black" />

                    <TextView
                        style="@style/NormalTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>